--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "devDependencies": {
         "admin-lte": "3.1.0",
         "axios": "^1.1.2",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^4.6.2",
         "jquery": "^3.6",
+        "js-datepicker": "^5.18.2",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
@@ -23,8 +24,5 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "bootstrap": "^5.3.0"
     }
 }
