--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "jquery.repeater": "^1.2.1"
     }
 }
