--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "nwidart/laravel-modules": "9.0.0",
+        "orangehill/iseed": "^3.0",
         "owen-it/laravel-auditing": "^13.5",
         "spatie/laravel-permission": "^5.10"
     },
