redesigned employee create forms

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "jquery.repeater": "^1.2.1"
+        "jquery.repeater": "^1.2.1",
+        "sweetalert2": "^11.7.16"
     }
 }
