--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
             "App\\": "app/",
             "Modules\\": "Modules/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Livewire\\": "vendor/livewire/livewire/src"
         },
         "files": [
             "app/Helpers/Common.php"
